chore: prepared project for production deployment

--- a/apps/api/SportCalendar.Api/appsettings.json
+++ b/apps/api/SportCalendar.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=codecave;Username=admin;Password=123"
+    "Postgres": ""
   },
   "Logging": {
     "LogLevel": {
