--- a/apps/api/SportCalendar.Api/.env.example
+++ b/apps/api/SportCalendar.Api/.env.example
@@ -4,3 +4,8 @@ ASPNETCORE_ENVIRONMENT=Production
 # PostgreSQL connection string used by EF Core
 # Example: Host=db;Port=5432;Database=sportcalendar;Username=app;Password=strong-password
 ConnectionStrings__Postgres=
+
+# Allowed CORS origins (set one or more values)
+# Example:
+# Cors__AllowedOrigins__0=https://your-web.up.railway.app
+Cors__AllowedOrigins__0=
