--- a/apps/api/SportCalendar.Api/appsettings.json
+++ b/apps/api/SportCalendar.Api/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Postgres": ""
   },
+  "Cors": {
+    "AllowedOrigins": []
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
