fix(web): stabilize exercise create flow in production (direct API URL + submit handling)

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,3 +1,7 @@
 # Public base URL of the API used by Next.js rewrites during build/runtime.
 # Example: https://api.example.com
 API_BASE_URL=http://localhost:5131
+
+# Public API URL used by the browser directly (recommended for production).
+# Example: https://your-api.up.railway.app
+NEXT_PUBLIC_API_BASE_URL=
